syntax = "proto3";

package auth;
option go_package = "github.com/dehwyy/makoto/libs/grpc/generated/auth";

service Auth {
  rpc SignUp(SignUpRequest) returns (AuthResponse);
  rpc SignIn(SignInRequest) returns (AuthResponse);
}

message SignUpRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message SignInRequest {
  // Credentials: if User.Provider == local (db) @see /libs/models/user_data.go
  message UserCredentials {
    oneof unique_identifier {
      string email = 101;
      string username = 102;
    }
    string password = 103;
  }
  // OAuth: input either Token or Code (which would get token itself)
  message UserOAuth2 {
    string provider = 200;
    oneof token_or_code {
      string token = 201;
      string code = 202;
    }
  }

  oneof auth_method {
    UserCredentials credentials = 1; // should be provided if SignIn not via OAuth2
    UserOAuth2 oauth2 = 2;
  }
}

message AuthResponse {
  string username = 1;
}
